Updated a bunch of stuff, Game is unified with Juan's Game changes, HandJuan and Hand are nearly identical, dealer is updated temporarily, player is edited in a few minor ways, round is changed in minor ways, score is ~same. Added Big Main for others to look over, also additions to pom.xml -- Edited JSON to be in correct resources file and call correctly